@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r3-pre6
+  {
+    Modules = LHCbDIRAC:v9r3-pre6, LHCbWebDIRAC:v4r4p9
+    Depends = DIRAC:v6r20p18
+    LcgVer = v14r2
+  }
+
   v9r3-pre5
   {
     Modules = LHCbDIRAC:v9r2p9, LHCbWebDIRAC:v4r4p9
